--- a/webapps/ROOT/WEB-INF/classes/templates/modules/rank/edit_rank.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/rank/edit_rank.html
@@ -33,19 +33,19 @@
                         :expand-on-click-node="false"
                         :indent="30">
                         <span class="custom-tree-node" slot-scope="{ node, data }">
-                            <span v-if="data.level == 1 && data.type == 0" style="font-size: 15px; color: rgb(0, 0, 0);font-weight: 700;">{{ data.name }}</span>
-                            <span v-if="data.level == 2 && data.type == 0" style="font-size: 15px; color: rgb(0, 57, 170);font-weight: 700;">{{ data.name }}</span>
-                            <span v-if="data.level == 3 && data.type == 0" style="font-size: 15px; color: rgb(4, 118, 248);font-weight: 700;">{{ data.name }}</span>
-                            <span v-if="data.level == 4 && data.type == 0" style="font-size: 15px; color: rgb(4, 117, 0);font-weight: 700;">{{ data.name }}</span>
-                            <span v-if="data.type !== 0" style="font-size: 15px; color: rgb(211, 65, 7);">{{ data.name }}</span>
-                            <span>权重:{{ data.weight }}</span>
+                            <span v-if="data.level == 1 && data.type == 0" style="font-size: 15px; color: rgb(0, 0, 0);font-weight: 700;" v-text="data.name"></span>
+                            <span v-if="data.level == 2 && data.type == 0" style="font-size: 15px; color: rgb(0, 57, 170);font-weight: 700;" v-text="data.name"></span>
+                            <span v-if="data.level == 3 && data.type == 0" style="font-size: 15px; color: rgb(4, 118, 248);font-weight: 700;" v-text="data.name"></span>
+                            <span v-if="data.level == 4 && data.type == 0" style="font-size: 15px; color: rgb(4, 117, 0);font-weight: 700;" v-text="data.name"></span>
+                            <span v-if="data.type !== 0" style="font-size: 15px; color: rgb(211, 65, 7);" v-text="data.name"></span>
+                            <!-- <span>权重:{{ data.weight }}</span>
                             <span>级别:{{ data.level }}</span>
-                            <span>最后:{{ data.end }}</span>
+                            <span>最后:{{ data.end }}</span> -->
                             <div>
                                 <el-button v-if="data.end !== 1" type="text" size="mini" @click="appendLevelOrRank(node, data)">添加</el-button>
                                 <el-button v-if="data.end == 1" type="text" size="mini" @click="editRankData(node, data)">编辑榜单</el-button>
                                 <el-button type="text" size="mini" @click="changeLevelOrRank(node, data)">修改</el-button>
-                                <el-button type="text" size="mini" @click="remove(node, data)">删除</el-button>
+                                <el-button type="text" size="mini" @click="removeThisCatalog(node, data)">删除</el-button>
                             </div>
                         </span>
                     </el-tree>
@@ -377,6 +377,7 @@
         </div>
         <!--人物榜单编辑子页面结束  2 -->
 
+        
 
         <!--案例榜单编辑子页面开始  3 -->
         <div v-show="showChildPage == 3">
@@ -427,8 +428,10 @@
                         <el-table-column label="操作" width="150" fixed="right">
                             <template slot-scope="scope">
                                 <el-button type="text" size="small" @click="addOrEditCaseToRank(scope.row)">编辑</el-button>
-                                <el-button type="text" size="small" @click="editInstituteToCaseItem(scope.row)">关联机构</el-button>
                                 <el-button type="text" size="small" @click="delThisCaseFromRank(scope.row)">删除</el-button>
+                                <span v-if="scope.row.title !== '1'" style="padding-left: 5px;">
+                                    <el-button type="text" size="small" @click="editInstituteToCaseItem(scope.row)">关联机构</el-button>
+                                </span>
                             </template>
                         </el-table-column>
                     </el-table>
@@ -581,11 +584,104 @@
                 <!--机构库弹出层结束   所属页面级 3-->
 
 
+            </div>
+        </div>
 
 
+        <!--服务机构榜单编辑子页面开始  4 -->
+        <div v-show="showChildPage == 4">
+            <div class="cv_content_square">
+                <!--服务榜单搜索区-->
+                <div class="cv_content_square">
+                    <el-form :model="searchServingForm" status-icon class="demo-ruleForm" label-width="15%" label-position="right" @submit.native.prevent>
+                        <el-row class="el-row-h60">
+                            <el-col :span="16">
+                                <el-form-item label="名称" style="margin:0;">
+                                    <el-input
+                                    clearable
+                                    type="text"
+                                    v-model="searchServingForm.name"
+                                    auto-complete="off"></el-input>
+                                </el-form-item>
+                            </el-col>
+                            <el-col :span="3" :offset="1" class="el-row-h40">
+                                <el-button type="primary" style="width:100%" @click="searchCurrentServing()">搜索</el-button>
+                            </el-col>
+                            <el-col :span="3" :offset="1" class="el-row-h40">
+                                <el-button style="width:100%" @click="backToRankListFromServing">返回</el-button>
+                            </el-col>
+                        </el-row>    
+                    </el-form>
+                </div>
+                <!--功能按钮区-->
+                <el-row class="el-row-h50">
+                    <el-col :span="5">
+                        <el-button type="primary" plain style="width:100%" icon="el-icon-plus" @click="addOrEditServingToRank(0)">添加服务机构</el-button>
+                    </el-col>
+                </el-row>
+                <!--表格查询结果区--不分页-->
+                <div class="cv_content_square">
+                    <el-table :data="currentServingTableData" style="width: 100%; margin:10px auto;" stripe>
+                        <el-table-column prop="name" label="名称" width=""></el-table-column>
+                        <el-table-column prop="weight" label="排序" width="150">
+                            <template slot-scope="scope">
+                                <el-input type="text" maxlength="6" style="width: 100px;" v-model="scope.row.weight" auto-complete="off" @change="servingRankWeightChange(scope.row)"></el-input>
+                            </template>
+                        </el-table-column>
+                        <el-table-column label="操作" width="100" fixed="right">
+                            <template slot-scope="scope">
+                                <el-button type="text" size="small" @click="addOrEditServingToRank(scope.row)">编辑</el-button>
+                                <el-button type="text" size="small" @click="delThisServingFromRank(scope.row)">删除</el-button>
+                            </template>
+                        </el-table-column>
+                    </el-table>
+                </div>
+
+                <!--新建编辑单条服务机构弹框开始   所属页面级 4-->
+                <el-dialog title="新建/编辑服务机构" :visible.sync="showAddOrEditServing" width="80%" :close-on-click-modal="false" :close-on-press-escape="false" :fullscreen="false" :show-close="false" >
+                    <el-form :model="servingForm" :rules="servingFormRules"  ref="servingForm" status-icon class="demo-ruleForm" label-width="15%" label-position="right" >
+                        <el-row class="el-row-h70">
+                            <el-col :span="24">
+                                <el-form-item label="名称" prop="name" style="margin:0;">
+                                    <el-input
+                                    clearable
+                                    type="text"
+                                    v-model="servingForm.name"
+                                    maxlength="36"
+                                    auto-complete="off"></el-input>
+                                </el-form-item>
+                            </el-col>
+                        </el-row>
+                        <el-row class="el-row-h70">
+                            <el-col :span="24">
+                                <el-form-item label="排序" prop="weight" style="margin:0;">
+                                    <el-input
+                                    :disabled="servingForm.title == 1"
+                                    type="text"
+                                    v-model="servingForm.weight"
+                                    maxlength="6"
+                                    auto-complete="off"></el-input>
+                                </el-form-item>
+                            </el-col>
+                        </el-row>
+                        <el-row class="el-row-h70" style="margin-top: 10px;">
+                            <el-row>
+                                <el-col class="el-row-h40" :span="3" :offset="8">
+                                    <el-button type="primary" style="width:100%" @click="saveSingleServingForm('servingForm')">保存</el-button>
+                                </el-col>
+                                <el-col class="el-row-h40" :span="3" :offset="2">
+                                    <el-button type="primary" style="width:100%" @click="closeSingleServingForm('servingForm')">取消</el-button>
+                                </el-col>
+                            </el-row>
+                        </el-row>
+                        
+                    </el-form>
+                </el-dialog>
+                <!--新建编辑单条服务机构弹框结束   所属页面级 4-->
 
             </div>
         </div>
+        <!--服务机构榜单编辑子页面结束  4 -->
 
 
     </div>
