--- a/webapps/ROOT/WEB-INF/classes/templates/modules/resource/guest_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/resource/guest_list.html
@@ -3,24 +3,24 @@
 <head>
 <link rel="stylesheet" href="${request.contextPath}/statics/css/icon.css">
 <link rel="stylesheet" href="${request.contextPath}/statics/css/element.css">
-<title>机构列表</title>
+<title>人物列表</title>
 </head>
 <body>
     <#include "/header.html">
-    <div class="cvpage_title_common">机构列表</div>
-    <div id="institution_list" class="cv_page_content">
+    <div class="cvpage_title_common">人物列表</div>
+    <div id="guest_list" class="cv_page_content">
         <!------------------列表开始------------------>
         <div v-show="!showChildPage">
             <!--列表搜索区-->
             <div class="cv_content_square">
                 <el-form :model="searchForm" status-icon class="demo-ruleForm" label-width="20%" label-position="right" @submit.native.prevent>
                     <el-row class="el-row-h60">
-                        <el-col :span="12">
-                            <el-form-item label="机构名称" style="margin:0;">
+                        <el-col :span="11">
+                            <el-form-item label="嘉宾名称" style="margin:0;">
                                 <el-input
                                 clearable
                                 type="text"
-                                v-model="searchForm.cooperationName"
+                                v-model="searchForm.guestName"
                                 auto-complete="off"></el-input>
                             </el-form-item>
                         </el-col>
@@ -33,26 +33,28 @@
             <!--功能按钮区-->
             <el-row class="el-row-h50">
                 <el-col :span="3">
-                    <el-button type="primary" plain icon="el-icon-plus" style="width:100%" @click="addOrEditCoper(0)">新增机构</el-button>
+                    <el-button type="primary" plain icon="el-icon-plus" style="width:100%" @click="addOrEditGuest(0)">新增人物</el-button>
                 </el-col>
             </el-row>
             <!--表格查询结果区-->
             <div class="cv_content_square">
                 <el-table :data="tableData" style="width: 100%; margin:10px auto;" ref="multipleTable" stripe>
-                    <el-table-column prop="cooperationName" label="机构名称" width=""></el-table-column>
-                    <el-table-column prop="cooperationImg" label="机构Logo" width="170">
-                        <template v-if="scope.row.cooperationImg" slot-scope="scope">
-                            <img style="width:150px;height:45px;" :src="scope.row.cooperationImg">
+                    <el-table-column prop="guestName" label="人物名称" width="100"></el-table-column>
+                    <el-table-column prop="guestImg" label="头像" width="120">
+                        <template v-if="scope.row.guestImg" slot-scope="scope">
+                            <img style="width:90px;height:90px;" :src="scope.row.guestImg">
                         </template>
                     </el-table-column>
-                    <el-table-column prop="cooperationCrtUserName" label="创建人" width="90"></el-table-column>
-                    <el-table-column prop="cooperationCrtTime" label="创建时间" width="160"></el-table-column>
-                    <el-table-column prop="cooperationModUserName" label="更新人" width="90"></el-table-column>
-                    <el-table-column prop="cooperationModTime" label="更新时间" width="160"></el-table-column>
+                    <el-table-column prop="guestPosition" label="职位" width="100"></el-table-column>
+                    <el-table-column prop="guestCompany" label="公司"></el-table-column>
+                    <el-table-column prop="guestCrtUserName" label="创建人" width="90"></el-table-column>
+                    <el-table-column prop="guestCrtTime" label="创建时间" width="95"></el-table-column>
+                    <el-table-column prop="guestModUserName" label="更新人" width="90"></el-table-column>
+                    <el-table-column prop="guestModTime" label="更新时间" width="95"></el-table-column>
                     <el-table-column label="操作" width="100" fixed="right">
                         <template slot-scope="scope">
-                            <el-button type="text" size="small" @click="addOrEditCoper(1,scope.row)">修改</el-button>
-                            <el-button type="text" size="small" @click="deleteThisCoper(scope.row)">删除</el-button>
+                            <el-button type="text" size="small" @click="addOrEditGuest(1,scope.row)">修改</el-button>
+                            <el-button type="text" size="small" @click="deleteThisGuest(scope.row)">删除</el-button>
                         </template>
                     </el-table-column>
                 </el-table>
@@ -75,27 +77,27 @@
         <div v-show="showChildPage">
             <!--表单信息-->
             <div class="cv_content_square">
-                <el-form :model="coperForm" :rules="coperFormRules"  ref="coperForm" status-icon class="demo-ruleForm" label-width="30%" label-position="right">
+                <el-form :model="guestForm" :rules="guestFormRules"  ref="guestForm" status-icon class="demo-ruleForm" label-width="30%" label-position="right">
                     <el-row class="el-row-h70">
                         <el-col :span="12">
-                            <el-form-item label="机构名称" prop="cooperationName" style="margin:0;">
+                            <el-form-item label="人物姓名" prop="guestName" style="margin:0;">
                                 <el-input
                                     maxlength="50"
                                     placeholder="限50字"
                                     type="text"
-                                    v-model="coperForm.cooperationName"
+                                    v-model="guestForm.guestName"
                                     auto-complete="off">
                                 </el-input>
                             </el-form-item>
                         </el-col>
                         <el-col :span="12">
-                            <el-form-item label="机构顺序" prop="cooperationPriority" style="margin:0;">
+                            <el-form-item label="人物职位" prop="guestPosition" style="margin:0;">
                                 <el-input
                                     clearable
                                     type="text"
                                     maxlength="50"
-                                    placeholder="机构显示顺序，默认为-1"
-                                    v-model="coperForm.cooperationPriority"
+                                    placeholder="限50字"
+                                    v-model="guestForm.guestPosition"
                                     auto-complete="off">
                                 </el-input>
                             </el-form-item>
@@ -103,35 +105,35 @@
                     </el-row>
                     <el-row class="el-row-h70">
                         <el-col :span="24">
-                            <el-form-item label="机构链接" label-width="15%" prop="cooperationUrl" style="margin:0;">
+                            <el-form-item label="所在公司" label-width="15%" prop="guestCompany" style="margin:0;">
                                 <el-input
                                     clearable
                                     type="text"
-                                    maxlength="500"
-                                    placeholder=""
-                                    v-model="coperForm.cooperationUrl"
+                                    maxlength="50"
+                                    placeholder="限50字"
+                                    v-model="guestForm.guestCompany"
                                     auto-complete="off">
                                 </el-input>
                             </el-form-item>
                         </el-col>
                     </el-row>
                     <el-row>
-                        <el-col :span="14">
-                            <el-form-item label="机构Logo" prop="cooperationImg" label-width="26%" style="margin:0;">
+                        <el-col :span="8">
+                            <el-form-item label="人物头像" prop="guestImg" label-width="45%" style="margin:0;">
                                 <el-upload
                                     class="avatar-uploader"
                                     action="https://jsonplaceholder.typicode.com/posts/"
                                     :show-file-list="false"
                                     :auto-upload="false"
                                     :on-success="handleAvatarSuccess"
-                                    :on-change="coperImgFileChange">
-                                    <img v-if="coperForm.cooperationImg" :src="coperForm.cooperationImg" class="avatar">
+                                    :on-change="guestImgFileChange">
+                                    <img v-if="guestForm.guestImg" :src="guestForm.guestImg" class="avatar">
                                     <i v-else class="el-icon-plus avatar-uploader-icon"></i>
                                 </el-upload>
                             </el-form-item>
                         </el-col>
-                        <el-col :span="10">
-                            <div style="line-height: 26px; font-size:12px; color:#666;">建议尺寸：290*80(像素，PX)<br>建议格式：JPG,JPEG,PNG<br>图片大小：不超过200KB</div>
+                        <el-col :span="16">
+                            <div style="line-height: 30px; font-size:12px; color:#666;">建议尺寸：200*200(像素，PX)<br>建议格式：JPG,JPEG,PNG<br>图片大小：不超过200KB</div>
                         </el-col>
                     </el-row>
                 </el-form>
@@ -139,10 +141,10 @@
             <!--新建保存修改-->
             <el-row class="el-row-h60" style="margin-top:20px;">
                 <el-col :span="3" :offset="8">
-                    <el-button type="primary" style="width:100%" @click="submitCreatEdit('coperForm')">保存</el-button>
+                    <el-button type="primary" style="width:100%" @click="submitCreatEdit('guestForm')">保存</el-button>
                 </el-col>
                 <el-col :span="3" :offset="2">
-                    <el-button type="primary" style="width:100%" @click="closeEditCreatEdit('coperForm')">取消</el-button>
+                    <el-button type="primary" style="width:100%" @click="closeEditCreatEdit('guestForm')">取消</el-button>
                 </el-col>
             </el-row>
         </div>
@@ -154,12 +156,12 @@
 
 
 <script type="text/javascript" src="${request.contextPath}/statics/js/element.js"></script>
-<script type="text/javascript" src="${request.contextPath}/statics/js/modules/meeting/institution_list.js"></script>
+<script type="text/javascript" src="${request.contextPath}/statics/js/modules/resource/guest_list.js"></script>
 <script type="text/javascript" src="${request.contextPath}/statics/js/clockToast.js"></script>
 
 <style>
 .avatar-uploader .el-upload {
-    width:290px;
+    width:150px;
     border: 1px dashed #d9d9d9;
     border-radius: 6px;
     cursor: pointer;
@@ -172,14 +174,14 @@
 .avatar-uploader-icon {
     font-size: 28px;
     color: #8c939d;
-    width: 298px;
-    height: 78px;
-    line-height: 78px;
+    width: 148px;
+    height: 148px;
+    line-height: 148px;
     text-align: center;
 }
 .avatar {
-    width: 290px;
-    height: 80px;
+    width: 150px;
+    height: 150px;
     display: block;
 }
 </style>
