--- a/webapps/ROOT/WEB-INF/classes/templates/modules/resource/position_image.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/resource/position_image.html
@@ -3,19 +3,19 @@
 <head>
 <link rel="stylesheet" href="${request.contextPath}/statics/css/icon.css">
 <link rel="stylesheet" href="${request.contextPath}/statics/css/element.css">
-<title>封面图库</title>
+<title>图位图库</title>
 </head>
 <body>
     <#include "/header.html">
-    <div class="cvpage_title_common">封面图库</div>
-    <div id="cover_image" class="cv_page_content">
-        <!------------------封面图列表开始------------------>
+    <div class="cvpage_title_common">图位图库</div>
+    <div id="position_image" class="cv_page_content">
+        <!------------------图位图列表开始------------------>
         <div v-show="!showChildPage">
             <!--列表搜索区-->
             <div class="cv_content_square">
                 <el-form :model="searchForm" status-icon class="demo-ruleForm" label-width="20%" label-position="right" @submit.native.prevent>
                     <el-row class="el-row-h60">
-                        <el-col :span="9">
+                        <el-col :span="14">
                             <el-form-item label="图片名称" style="margin:0;">
                                 <el-input
                                 clearable
@@ -24,9 +24,24 @@
                                 auto-complete="off"></el-input>
                             </el-form-item>
                         </el-col>
-                        <el-col :span="11">
+                        <el-col :span="10">
+                            <el-form-item label="所属图位" style="margin:0;">
+                                <el-select v-model="searchForm.picTypeId" placeholder="请选择" clearable style="width:100%">
+                                    <el-option
+                                      v-for="item in picPosOptions"
+                                      :key="item.id"
+                                      :label="item.name"
+                                      :value="item.id">
+                                    </el-option>
+                                </el-select>
+                            </el-form-item>
+                        </el-col>
+                    </el-row>
+                    <el-row>
+                        <el-col :span="14">
                             <el-form-item label="上传时间" style="margin:0;">
                                 <el-date-picker
+                                    clearable
                                     style="width:100%;"
                                     v-model="timeRange"
                                     type="datetimerange"
@@ -38,7 +53,7 @@
                                 </el-date-picker>
                             </el-form-item>
                         </el-col>
-                        <el-col :span="3" :offset="1" class="el-row-h40">
+                        <el-col :span="3" :offset="7" class="el-row-h40">
                             <el-button type="primary" icon="el-icon-search" style="width:100%" @click="startSearch(0)">搜索</el-button>
                         </el-col>
                     </el-row>
@@ -89,42 +104,41 @@
             </div>
 
         </div>
-        <!------------------封面图列表结束------------------>
+        <!------------------图位图列表结束------------------>
 
         <!------------------新增修改列表结束------------------>
         <div v-show="showChildPage">
             <!--表单信息-->
             <div class="cv_content_square">
-                <el-form :model="coverImgForm" :rules="coverImgFormRules" ref="coverImgForm" status-icon class="demo-ruleForm" label-width="30%" label-position="right">
+                <el-form :model="picPosForm" :rules="picPosFormRules"  ref="picPosForm" status-icon class="demo-ruleForm" label-width="30%" label-position="right">
                     <el-row class="el-row-h70">
-                        <el-col :span="12">
-                            <el-form-item label="图片标题" prop="picTitle" style="margin:0;">
+                        <el-col :span="24">
+                            <el-form-item label="图片标题" label-width="15%" prop="picTitle" style="margin:0;">
                                 <el-input
                                 maxlength="20"
-                                placeholder="限20字"
+                                placeholder="限20个字"
                                 type="text"
-                                v-model="coverImgForm.picTitle"
-                                auto-complete="off">
-                            </el-input>
+                                v-model="picPosForm.picTitle"
+                                auto-complete="off"></el-input>
                             </el-form-item>
                         </el-col>
-                        <el-col :span="12">
-                            <el-form-item label="图片描述" prop="picDesc" style="margin:0;">
-                                <el-input
-                                clearable
-                                type="text"
-                                maxlength="20"
-                                placeholder="限20字"
-                                v-model="coverImgForm.picDesc"
-                                auto-complete="off">
-                            </el-input>
+                        <!-- <el-col :span="12">
+                            <el-form-item label="所属图位" prop="picTypeId" style="margin:0;">
+                                <el-select v-model="picPosForm.picTypeId" placeholder="请选择" clearable style="width:100%">
+                                    <el-option
+                                        v-for="item in picPosOptions"
+                                        :key="item.id"
+                                        :label="item.name"
+                                        :value="item.id">
+                                    </el-option>
+                                </el-select>
                             </el-form-item>
-                        </el-col>
+                        </el-col> -->
                     </el-row>
                     <el-row class="el-row-h70">
                         <el-col :span="12">
                             <el-form-item label="图片分类" prop="picType" style="margin:0;">
-                                <el-select v-model="coverImgForm.picType" style="width:100%;" disabled>
+                                <el-select v-model="picPosForm.picType" style="width:100%;" disabled>
                                     <el-option
                                       v-for="item in picTypeOptions"
                                       :key="item.value"
@@ -136,7 +150,7 @@
                         </el-col>
                         <el-col :span="12">
                             <el-form-item label="图片状态" prop="picStatus" style="margin:0;">
-                                <el-select v-model="coverImgForm.picStatus" style="width:100%;" placeholder="" disabled>
+                                <el-select v-model="picPosForm.picStatus" style="width:100%;" placeholder="" disabled>
                                     <el-option
                                       v-for="item in picStatusOptions"
                                       :key="item.value"
@@ -147,16 +161,27 @@
                             </el-form-item>
                         </el-col>
                     </el-row>
+                    <el-row class="el-row-h70">
+                        <el-col :span="24">
+                            <el-form-item label="图片描述" prop="picDesc" label-width="15%" style="margin:0;">
+                                <el-input
+                                maxlength="20"
+                                placeholder="限20个字"
+                                type="text"
+                                v-model="picPosForm.picDesc"
+                                auto-complete="off"></el-input>
+                            </el-form-item>
+                        </el-col>
+                    </el-row>
                     <el-row>
-                        <el-form-item label="封面图片" prop="picUrl" label-width="15%" style="margin:0;">
+                        <el-form-item label="图位图片" prop="picUrl" label-width="15%" style="margin:0;">
                             <el-upload
                                 class="avatar-uploader"
                                 action="https://jsonplaceholder.typicode.com/posts/"
                                 :show-file-list="false"
                                 :auto-upload="false"
-                                :on-success="handleAvatarSuccess"
                                 :on-change="coverImgFileChange">
-                                <img v-if="coverImgForm.picUrl" :src="coverImgForm.picUrl" class="avatar">
+                                <img v-if="picPosForm.picUrl" :src="picPosForm.picUrl" class="avatar">
                                 <i v-else class="el-icon-plus avatar-uploader-icon"></i>
                             </el-upload>
                         </el-form-item>
@@ -166,10 +191,10 @@
             <!--新建保存修改-->
             <el-row class="el-row-h60" style="margin-top:20px;">
                 <el-col :span="3" :offset="8">
-                    <el-button type="primary" style="width:100%" @click="submitCreatEdit('coverImgForm')">保存</el-button>
+                    <el-button type="primary" style="width:100%" @click="submitCreatEdit('picPosForm')">保存</el-button>
                 </el-col>
                 <el-col :span="3" :offset="2">
-                    <el-button type="primary" style="width:100%" @click="closeEditCreatEdit('coverImgForm')">取消</el-button>
+                    <el-button type="primary" style="width:100%" @click="closeEditCreatEdit('picPosForm')">取消</el-button>
                 </el-col>
             </el-row>
         </div>
@@ -181,7 +206,7 @@
 
 
 <script type="text/javascript" src="${request.contextPath}/statics/js/element.js"></script>
-<script type="text/javascript" src="${request.contextPath}/statics/js/modules/content/cover_image.js"></script>
+<script type="text/javascript" src="${request.contextPath}/statics/js/modules/resource/position_image.js"></script>
 <script type="text/javascript" src="${request.contextPath}/statics/js/clockToast.js"></script>
 
 <style>
