--- a/webapps/ROOT/WEB-INF/classes/templates/modules/resource/selfmedia_image.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/resource/selfmedia_image.html
@@ -3,19 +3,19 @@
 <head>
 <link rel="stylesheet" href="${request.contextPath}/statics/css/icon.css">
 <link rel="stylesheet" href="${request.contextPath}/statics/css/element.css">
-<title>图位图库</title>
+<title>自媒体图库</title>
 </head>
 <body>
     <#include "/header.html">
-    <div class="cvpage_title_common">图位图库</div>
-    <div id="position_image" class="cv_page_content">
-        <!------------------图位图列表开始------------------>
+    <div class="cvpage_title_common">自媒体图库</div>
+    <div id="selfmedia_image" class="cv_page_content">
+        <!------------------封面图列表开始------------------>
         <div v-show="!showChildPage">
             <!--列表搜索区-->
             <div class="cv_content_square">
                 <el-form :model="searchForm" status-icon class="demo-ruleForm" label-width="20%" label-position="right" @submit.native.prevent>
                     <el-row class="el-row-h60">
-                        <el-col :span="14">
+                        <el-col :span="9">
                             <el-form-item label="图片名称" style="margin:0;">
                                 <el-input
                                 clearable
@@ -24,36 +24,21 @@
                                 auto-complete="off"></el-input>
                             </el-form-item>
                         </el-col>
-                        <el-col :span="10">
-                            <el-form-item label="所属图位" style="margin:0;">
-                                <el-select v-model="searchForm.picTypeId" placeholder="请选择" clearable style="width:100%">
-                                    <el-option
-                                      v-for="item in picPosOptions"
-                                      :key="item.id"
-                                      :label="item.name"
-                                      :value="item.id">
-                                    </el-option>
-                                </el-select>
-                            </el-form-item>
-                        </el-col>
-                    </el-row>
-                    <el-row>
-                        <el-col :span="14">
+                        <el-col :span="11">
                             <el-form-item label="上传时间" style="margin:0;">
                                 <el-date-picker
-                                    clearable
                                     style="width:100%;"
                                     v-model="timeRange"
                                     type="datetimerange"
+                                    :picker-options="pickerOptions"
                                     start-placeholder="开始日期"
                                     end-placeholder="结束日期"
-                                    :picker-options="pickerOptions"
                                     value-format="yyyy-MM-dd HH:mm:ss"
                                     :default-time="['00:00:00', '00:00:00']">
                                 </el-date-picker>
                             </el-form-item>
                         </el-col>
-                        <el-col :span="3" :offset="7" class="el-row-h40">
+                        <el-col :span="3" :offset="1" class="el-row-h40">
                             <el-button type="primary" icon="el-icon-search" style="width:100%" @click="startSearch(0)">搜索</el-button>
                         </el-col>
                     </el-row>
@@ -75,14 +60,14 @@
                         type="selection"
                         width="55">
                     </el-table-column>
-                    <el-table-column prop="picUrl" label="图片预览" width="160">
+                    <el-table-column prop="picUrl" label="封面图预览" width="180">
                         <template v-if="scope.row.picUrl" slot-scope="scope">
                             <img style="width:100px;height:70px;" :src="scope.row.picUrl">
                         </template>
                     </el-table-column>
                     <el-table-column prop="picTitle" label="图片名称" width="250"></el-table-column>
                     <el-table-column prop="picEditorName" label="创建人" width="120"></el-table-column>
-                    <el-table-column prop="picCrtTime" label="创建时间"></el-table-column>
+                    <el-table-column prop="picModTime" label="最后更新时间"></el-table-column>
                     <el-table-column label="操作" width="150" fixed="right">
                         <template slot-scope="scope">
                             <el-button type="text" size="small" @click="downLoadThisPic(scope.row)">下载</el-button>
@@ -104,41 +89,39 @@
             </div>
 
         </div>
-        <!------------------图位图列表结束------------------>
+        <!------------------封面图列表结束------------------>
 
         <!------------------新增修改列表结束------------------>
         <div v-show="showChildPage">
             <!--表单信息-->
             <div class="cv_content_square">
-                <el-form :model="picPosForm" :rules="picPosFormRules"  ref="picPosForm" status-icon class="demo-ruleForm" label-width="30%" label-position="right">
+                <el-form :model="selfmediaImgForm" :rules="selfmediaImgFormRules"  ref="selfmediaImgForm" status-icon class="demo-ruleForm" label-width="30%" label-position="right">
                     <el-row class="el-row-h70">
-                        <el-col :span="24">
-                            <el-form-item label="图片标题" label-width="15%" prop="picTitle" style="margin:0;">
+                        <el-col :span="12">
+                            <el-form-item label="图片标题" prop="picTitle" style="margin:0;">
                                 <el-input
                                 maxlength="20"
-                                placeholder="限20个字"
+                                placeholder="限20字"
                                 type="text"
-                                v-model="picPosForm.picTitle"
+                                v-model="selfmediaImgForm.picTitle"
                                 auto-complete="off"></el-input>
                             </el-form-item>
                         </el-col>
-                        <!-- <el-col :span="12">
-                            <el-form-item label="所属图位" prop="picTypeId" style="margin:0;">
-                                <el-select v-model="picPosForm.picTypeId" placeholder="请选择" clearable style="width:100%">
-                                    <el-option
-                                        v-for="item in picPosOptions"
-                                        :key="item.id"
-                                        :label="item.name"
-                                        :value="item.id">
-                                    </el-option>
-                                </el-select>
+                        <el-col :span="12">
+                            <el-form-item label="图片描述" prop="picDesc" style="margin:0;">
+                                <el-input
+                                maxlength="20"
+                                placeholder="限20字"
+                                type="text"
+                                v-model="selfmediaImgForm.picDesc"
+                                auto-complete="off"></el-input>
                             </el-form-item>
-                        </el-col> -->
+                        </el-col>
                     </el-row>
                     <el-row class="el-row-h70">
                         <el-col :span="12">
                             <el-form-item label="图片分类" prop="picType" style="margin:0;">
-                                <el-select v-model="picPosForm.picType" style="width:100%;" disabled>
+                                <el-select v-model="selfmediaImgForm.picType" style="width:100%;" disabled>
                                     <el-option
                                       v-for="item in picTypeOptions"
                                       :key="item.value"
@@ -150,7 +133,7 @@
                         </el-col>
                         <el-col :span="12">
                             <el-form-item label="图片状态" prop="picStatus" style="margin:0;">
-                                <el-select v-model="picPosForm.picStatus" style="width:100%;" placeholder="" disabled>
+                                <el-select v-model="selfmediaImgForm.picStatus" style="width:100%;" placeholder="" disabled>
                                     <el-option
                                       v-for="item in picStatusOptions"
                                       :key="item.value"
@@ -161,27 +144,15 @@
                             </el-form-item>
                         </el-col>
                     </el-row>
-                    <el-row class="el-row-h70">
-                        <el-col :span="24">
-                            <el-form-item label="图片描述" prop="picDesc" label-width="15%" style="margin:0;">
-                                <el-input
-                                maxlength="20"
-                                placeholder="限20个字"
-                                type="text"
-                                v-model="picPosForm.picDesc"
-                                auto-complete="off"></el-input>
-                            </el-form-item>
-                        </el-col>
-                    </el-row>
                     <el-row>
-                        <el-form-item label="图位图片" prop="picUrl" label-width="15%" style="margin:0;">
+                        <el-form-item label="封面图片" prop="picUrl" label-width="15%" style="margin:0;">
                             <el-upload
                                 class="avatar-uploader"
                                 action="https://jsonplaceholder.typicode.com/posts/"
                                 :show-file-list="false"
                                 :auto-upload="false"
                                 :on-change="coverImgFileChange">
-                                <img v-if="picPosForm.picUrl" :src="picPosForm.picUrl" class="avatar">
+                                <img v-if="selfmediaImgForm.picUrl" :src="selfmediaImgForm.picUrl" class="avatar">
                                 <i v-else class="el-icon-plus avatar-uploader-icon"></i>
                             </el-upload>
                         </el-form-item>
@@ -191,10 +162,10 @@
             <!--新建保存修改-->
             <el-row class="el-row-h60" style="margin-top:20px;">
                 <el-col :span="3" :offset="8">
-                    <el-button type="primary" style="width:100%" @click="submitCreatEdit('picPosForm')">保存</el-button>
+                    <el-button type="primary" style="width:100%" @click="submitCreatEdit('selfmediaImgForm')">保存</el-button>
                 </el-col>
                 <el-col :span="3" :offset="2">
-                    <el-button type="primary" style="width:100%" @click="closeEditCreatEdit('picPosForm')">取消</el-button>
+                    <el-button type="primary" style="width:100%" @click="closeEditCreatEdit('selfmediaImgForm')">取消</el-button>
                 </el-col>
             </el-row>
         </div>
@@ -206,7 +177,7 @@
 
 
 <script type="text/javascript" src="${request.contextPath}/statics/js/element.js"></script>
-<script type="text/javascript" src="${request.contextPath}/statics/js/modules/content/position_image.js"></script>
+<script type="text/javascript" src="${request.contextPath}/statics/js/modules/resource/selfmedia_image.js"></script>
 <script type="text/javascript" src="${request.contextPath}/statics/js/clockToast.js"></script>
 
 <style>
@@ -224,9 +195,9 @@
 .avatar-uploader-icon {
     font-size: 28px;
     color: #8c939d;
-    width: 148px;
-    height: 148px;
-    line-height: 148px;
+    width: 108px;
+    height: 108px;
+    line-height: 118px;
     text-align: center;
 }
 .avatar {
