--- a/webapps/ROOT/WEB-INF/classes/templates/modules/rank/rank_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/rank/rank_list.html
@@ -110,6 +110,7 @@
                                 <el-input
                                 clearable
                                 type="text"
+                                maxlength="300"
                                 v-model="rankForm.meetUrl"
                                 auto-complete="off"></el-input>
                             </el-form-item>
