--- a/webapps/ROOT/WEB-INF/classes/templates/modules/rank/edit_rank.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/rank/edit_rank.html
@@ -62,7 +62,7 @@
                                 <el-input
                                 clearable
                                 type="text"
-                                maxlength="50"
+                                maxlength="80"
                                 v-model="rankInfoForm.name"
                                 auto-complete="off"></el-input>
                             </el-form-item>
@@ -430,9 +430,9 @@
                             <template slot-scope="scope">
                                 <el-button type="text" size="small" @click="addOrEditCaseToRank(scope.row)">编辑</el-button>
                                 <el-button type="text" size="small" @click="delThisCaseFromRank(scope.row)">删除</el-button>
-                                <span v-if="scope.row.title !== '1'" style="padding-left: 5px;">
+                                <!-- <span v-if="scope.row.title !== '1'" style="padding-left: 5px;"> -->
                                     <el-button type="text" size="small" @click="editInstituteToCaseItem(scope.row)">关联机构</el-button>
-                                </span>
+                                <!-- </span> -->
                             </template>
                         </el-table-column>
                     </el-table>
