--- a/webapps/ROOT/WEB-INF/classes/templates/modules/rank/rank_list.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/rank/rank_list.html
@@ -54,11 +54,11 @@
                     <el-table-column prop="updateAt" label="修改时间" width="160"></el-table-column>
                     <el-table-column label="操作" width="200" fixed="right">
                         <template slot-scope="scope">
-                            <el-button type="text" size="small" v-if="scope.row.publishStatus == 0" @click="onlineThisRank(scope.row)">发布</el-button>
+                            <el-button type="text" size="small" v-if="scope.row.publishStatus == 0 || scope.row.publishStatus == 3" @click="onlineThisRank(scope.row)">发布</el-button>
                             <el-button type="text" size="small" v-if="scope.row.publishStatus == 2" @click="offlineThisRank(scope.row)">下线</el-button>
                             <el-button type="text" size="small" v-if="scope.row.publishStatus == 0" @click="editThisRank(scope.row)">编辑</el-button>
-                            <el-button type="text" size="small" v-if="scope.row.publishStatus == 0" @click="linkToEditPage(scope.row)">榜单管理</el-button>
-                            <el-button type="text" size="small" v-if="scope.row.publishStatus == 0" @click="deleteThisRank(scope.row)">删除</el-button>
+                            <el-button type="text" size="small" @click="linkToEditPage(scope.row)">榜单管理</el-button>
+                            <el-button type="text" size="small" v-if="scope.row.publishStatus == 0 ||scope.row.publishStatus == 3" @click="deleteThisRank(scope.row)">删除</el-button>
                         </template>
                     </el-table-column>
                 </el-table>
