--- a/webapps/ROOT/WEB-INF/classes/templates/modules/rank/edit_rank.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/rank/edit_rank.html
@@ -33,11 +33,11 @@
                         :expand-on-click-node="false"
                         :indent="30">
                         <span class="custom-tree-node" slot-scope="{ node, data }">
-                            <span v-if="data.level == 1 && data.type == 0" style="font-size: 15px; color: rgb(0, 0, 0);font-weight: 700;" v-text="data.name"></span>
-                            <span v-if="data.level == 2 && data.type == 0" style="font-size: 15px; color: rgb(0, 57, 170);font-weight: 700;" v-text="data.name"></span>
-                            <span v-if="data.level == 3 && data.type == 0" style="font-size: 15px; color: rgb(4, 118, 248);font-weight: 700;" v-text="data.name"></span>
-                            <span v-if="data.level == 4 && data.type == 0" style="font-size: 15px; color: rgb(4, 117, 0);font-weight: 700;" v-text="data.name"></span>
-                            <span v-if="data.type !== 0" style="font-size: 15px; color: rgb(211, 65, 7);" v-text="data.name"></span>
+                            <span v-if="data.level == 1 && data.type == 0" style="max-width:450px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;font-size: 15px; color: rgb(0, 0, 0);font-weight: 700;" v-text="data.name"></span>
+                            <span v-if="data.level == 2 && data.type == 0" style="max-width:450px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;font-size: 15px; color: rgb(0, 57, 170);font-weight: 700;" v-text="data.name"></span>
+                            <span v-if="data.level == 3 && data.type == 0" style="max-width:450px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;font-size: 15px; color: rgb(4, 118, 248);font-weight: 700;" v-text="data.name"></span>
+                            <span v-if="data.level == 4 && data.type == 0" style="max-width:450px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;font-size: 15px; color: rgb(4, 117, 0);font-weight: 700;" v-text="data.name"></span>
+                            <span v-if="data.type !== 0" style="max-width:450px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;font-size: 15px; color: rgb(211, 65, 7);" v-text="data.name"></span>
                             <!-- <span>权重:{{ data.weight }}</span>
                             <span>级别:{{ data.level }}</span>
                             <span>最后:{{ data.end }}</span> -->
